# CropGym-irrigation

./: README.md  evaluate_agent.py  plot_nue_from_pkl.py  pyproject.toml  run_demeter.py  train_winterwheat.py
pcse_gym/: initialize_envs.py
pcse_gym/agent/: masked_actorcriticpolicy.py  ppo_mod.py
pcse_gym/envs/: common_env.py  constraints.py  rewards.py  sb3.py  winterwheat.py
pcse_gym/envs/configs/: Wofost81_NWLP_MLWB_SNOMIN.conf
pcse_gym/envs/configs/agro/: wheat_cropcalendar.yaml  wheat_example_cropcalendar.yaml
pcse_gym/envs/configs/crop/: YAMLCropDataProvider.pkl
pcse_gym/envs/configs/soil/: EC1-coarse_soil.yaml  EC3-mediumfine_soil.yaml  EC6-fine_soil.yaml
pcse_gym/utils/: defaults.py  eval.py  nitrogen_helpers.py  plotter.py  weather_plots.py
tests/: initialize_env.py  test_agent.py  test_env_functions.py  test_env_zero.py  test_model.py  test_n_utils.py  test_reward.py
