# --- poetry config

[tool.poetry]
name = "cropgym"
version = "0.0.1"
description = "Reinforcement Learning Environment for Crop Management"
authors = ["Wageningen University and Research"]
readme = "README.md"
homepage = "https://cropgym.ai/"
keywords = ["reinforcement learning"]
packages = [
    { include = "pcse_gym" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
gymnasium = "^0.29.1"
pyyaml = "^6.0.1"
numpy = "^1.26.4"
datetime = "^5.5"
pcse = "6.0.9"

stable-baselines3 = { version = "^2.3.2", optional = true }
sb3-contrib = { version = "^2.3.0", optional = true }
matplotlib = { version = "^3.9.0", optional = true }
torch = { version = "^2.3.1", optional = true }
lib-programname = { version = "^2.0.9", optional = true }
tensorboard = { version = "^2.17.0", optional = true }
scipy = { version = "^1.13.1", optional = true }
tqdm = { version = "^4.66.4", optional = true }
pandas = { version = "^2.2.2", optional = true }

[tool.poetry.extras]
sb-integration = ["stable-baselines3", "sb3-contrib", "matplotlib", "torch", "lib-programname", "tensorboard", "scipy", "tqdm", "pandas"]

[build-system]
#requires = ["poetry-core"]
#requires = ["setuptools", "wheel"]
#build-backend = "setuptools.build_meta"
#build-backend = "poetry.core.masonry.api"
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

# --- uv config

[project]
name = "cropgym"
version = "0.0.1"
description = "Reinforcement Learning Environment for Crop Management"
readme = "README.md"
keywords = ["reinforcement learning"]
requires-python = ">=3.10,<3.13"
authors = [{ name = "Wageningen University and Research" }]

dependencies = [
  "gymnasium>=0.29.1,<0.30.0",
  "pyyaml>=6.0.1,<7.0.0",
  "numpy>=1.26.4,<2.0.0",
  "datetime>=5.5,<6.0",
  "pcse==6.0.9",
]

[project.urls]
Homepage = "https://cropgym.ai/"

[project.optional-dependencies]
sb-integration = [
  "stable-baselines3>=2.3.2,<3.0.0",
  "sb3-contrib>=2.3.0,<3.0.0",
  "matplotlib>=3.9.0,<4.0.0",
  "torch>=2.3.1,<3.0.0",
  "lib-programname>=2.0.9,<3.0.0",
  "tensorboard>=2.17.0,<3.0.0",
  "scipy>=1.13.1,<2.0.0",
  "tqdm>=4.66.4,<5.0.0",
  "pandas>=2.2.2,<3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pcse_gym"]

#[tool.setuptools.packages.find]
#include = ["pcse_gym"]
